--- a/06_DOM/two.html
+++ b/06_DOM/two.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +10,7 @@
 </head>
 <body style="background-color: #212121; color: #fff;">
     <div class="parent">
-        <!-- this is a comment -->
+        <!-- div.day*5 karne div class 5 baar aajaigi  -->
         <div class="day">Monday</div>
         <div class="day">Tuesday</div>
         <div class="day">Wednesday</div>
@@ -24,15 +26,15 @@
     // for (let i = 0; i < parent.children.length; i++) {
     //      console.log(parent.children[i].innerHTML);
         
-    // }
-    parent.children[1].style.color = "orange"
-    // console.log(parent.firstElementChild);
+   // }  // for loop html jaisa ya array jaisa dikhega uspe chalega
+    // parent.children[1].style.color = "orange"
+    // console.log(parent.firstElementChild);  // 
     // console.log(parent.lastElementChild);
 
     const dayOne = document.querySelector('.day')
     // console.log(dayOne);
-    // console.log(dayOne.parentElement);
-    // console.log(dayOne.nextElementSibling);
+    // console.log(dayOne.parentElement); // parent pe jana
+    // console.log(dayOne.nextElementSibling); //next element sibling
 
     console.log("NODES: ", parent.childNodes);
 </script>
