--- a/06_DOM/four.html
+++ b/06_DOM/four.html
@@ -43,6 +43,7 @@
     const lastLang = document.querySelector('li:last-child')
     lastLang.remove()
 
-
+//  nodelist mein foreach lagta html collection mein nhi
 </script>
 </html>  
+
