--- a/two.html
+++ b/two.html
@@ -20,7 +20,7 @@
     const changeMe = setTimeout(changeText, 2000)
 
     document.querySelector('#stop').addEventListener('click', function(){
-        clearTimeout(changeMe)
+        clearTimeout(changeMe) //clearTimeout(changeMe): Cancels the timer set by setTimeout for changeText
         console.log("STOPPED")
     })
 </script>
